# digital-infra-newsletter

./: .gitignore  AGENTS.md  RAILWAY_CLI_DEPLOY.md  README.md  package-lock.json  package.json  playwright_cli.md  pyproject.toml  requirements.txt  response.json  spec.md  summary-agent-graph.mmd  updates v2.md  updates.md
newsletter-generator-ui/: next.config.mjs  package-lock.json  package.json
newsletter-generator-ui/app/: globals.css  layout.tsx  page.tsx
newsletter-generator-ui/components/: dashboard-view.tsx  debug-terminal.tsx  generation-view.tsx  header.tsx  home-client.tsx  newsletter-reading-view.tsx  settings-modal.tsx
newsletter-generator-ui/lib/: api.ts  mock-data.ts
scripts/: render_graph_png.py
src/: __init__.py  config.py  constants.py  main.py
src/agents/: __init__.py  editor.py  manager.py  research.py  reviewer.py
src/schemas/: __init__.py  api.py  evidence.py  sections.py  state.py
src/storage/: __init__.py  artifacts.py
src/tools/: __init__.py  fetch_article.py  market_data.py  openai_web_search.py  web_search.py
src/utils/: __init__.py  citations.py
src/workflow/: __init__.py  graph.py  nodes.py
tests/: test_schemas.py  test_tools.py  test_workflow.py
